# lrpc

./: CMakeLists.txt  README.md  barrier.h  crc_hash.h  lrpc.cc  lrpc.h  lrpc_common.h  lrpc_ofi_client.cc  lrpc_ofi_server.cc  lrpc_ofi_transport.h  lrpc_ofi_transport_util.h  lrpc_transport.h  tls_registry.cc  tls_registry.h
protobuf-msg/: Makefile  pingpong.cc  pingpong.proto
protoc_plugin/: CMakeLists.txt  README.md  cpp_generator.cc  cpp_generator.h  cpp_generator_helpers.h  generator_helpers.h  lrpc_cpp_generator.cc  lrpc_cpp_generator.h  lrpc_cpp_plugin.cc
protoc_plugin/cmake/: protobuf.cmake
